--- a/01-introduccion/tsconfig.json
+++ b/01-introduccion/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "resolveJsonModule": true,
     "outDir": "./dist/out-tsc",
     "strict": true,
@@ -19,6 +20,17 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "paths": {
+      "@core/*": [
+        "src/app/core/*"
+      ],
+      "@modules/*": [
+        "src/app/modules/*"
+      ],
+      "@shared/*": [
+        "src/app/shared/*"
+      ]
+    },
     "lib": [
       "ES2022",
       "dom"
